Fix z-index of h4

--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -108,10 +108,13 @@
         left: -15px;
       }
 
+      
+
       .h3_accentColor {
         color: $accent-blue;
         font-size: 40px;
         font-weight: $font-bold;
+        z-index: 2;
       }
 
       h3 {
@@ -119,6 +122,10 @@
         color: white;
         text-align: center;
         font-size: 30px;
+        z-index: 2;
+      }
+
+      h4 {
         z-index: 2;
       }
 
